# aggregateplugin

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  doxygen.cfg
examples/: Makefile.am
examples/example1/: count1.hex
examples/example2/: min1.hex
examples/example3/: min2.hex
examples/example4/: minmax1.hex
examples/example5/: max1.hex
examples/example6/: nomask.hex
examples/example8/: nomask_count.hex
examples/tests/: aggregates.test  count1.out  max1.out  min1.out  min2.out  min2.stderr  minmax1.out  nomask.out  nomask_count.out  nomask_max.stderr
include/: AggAtom.h  AggPlugin.h  AggPluginInterface.h  CountAtom.h  Makefile.am  MaxAtom.h  MinAtom.h  pluginInterface.h
src/: AggAtom.cpp  AggPlugin.cpp  AggPluginInterface.cpp  CountAtom.cpp  Makefile.am  MaxAtom.cpp  MinAtom.cpp  pluginInterface.cpp
testsuite/: Makefile.am  aggregates.test  min1.hex  minmax1.hex  minmax1.out  run-dlvhex-tests.sh
testsuite/tests/: aggregates.test
