EXTRA_DIST = \
    aggregates.test \
    count1.hex \
    count1.out \
    min1.hex \
    min1.out \
    min2.hex \
    min2.out \
    minmax1.hex \
    minmax1.out \
	run-dlvhex-tests.sh

TESTS = run-dlvhex-tests.sh

TESTS_ENVIRONMENT = TESTDIR=$(top_srcdir)/testsuite DLVHEX=dlvhex PARAMETERS="-s --plugindir=$(top_builddir)/src/.libs"

